Removed deprecated redcarpet, more details in backup page

--- a/404.md
+++ b/404.md
@@ -4,8 +4,8 @@ layout: default
 title: Not Found
 ---
 
-##404 – Page Not Found
+## 404 – Page Not Found
 
 Sorry, there is no page at this address.
 
-[Home](/)
+[Home page](/)
